Refactor to functional programming style
- Use @Value instead of @Data for immutable DTOs
- Replace Collectors.toList() with Stream.toList()
- Use Map.of() for immutable error responses
- Replace null checks with Optional
- Separate pure functions from side effects in services
- Simplify CacheConfig with typed Jackson serializer